@@ -1,3 +1,13 @@
+2002-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* lily/regular-spacing-engraver.cc: Add regular-distance-to.
+
+	* input/test/orchestscore.ly:  
+
+	* input/test/part-combine-moments.ly:
+	* input/test/part-combine-staff.ly: markScriptPadding ->
+	RehearsalMark #'padding.
+
 2002-08-19  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
 	* Documentation/user/introduction.itely: small corrections.
